--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
     background-color: black;
 }
 
+/* SIDEBAR */
 .sidebar {
     position: fixed;
     top: 0;
@@ -12,20 +13,20 @@ body {
     color: white;
 }
 
-.sidebar_navigation {
+.sidebar__navigation {
     background-color: rgba(128, 128, 128, 0.219);
     border-radius: 8px;
     padding: 16px 0px 0px 16px;
 }
 
-.sidebar_navigation .logo {
+.sidebar__navigation .logo {
     background: #121212;
-    display: flex;
+    margin: 10px;
     border-radius: 8px;
     padding: 16px;
 }
 
-.sidebar_navigation .logo img {
+.sidebar__navigation .logo img {
     width: 80px;
 }
 
@@ -36,7 +37,6 @@ body {
 
 .sidebar ul li {
     padding: 10px 0;
-
 }
 
 .sidebar nav ul li a {
@@ -48,14 +48,129 @@ body {
     font-family: "DM Sans", sans-serif;
 }
 
+/* SIDEBAR - LIBRARY */
+
 .library {
-    margin-top: 30px;
-    padding: 10px;
-    background-color: rgba(128, 128, 128, 0.219);
+    background-color: #121212;
     border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 4px 8px;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.library .library__content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.Library .library__button {
+    display: flex;
+    margin-right: 1px;
+    color: #b3b3b3;
+    background-color: transparent;
+    border: 0;
+    font-size: 14px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    padding: 20px 10px;
+}
+
+.Library .library__button .fa {
+    font-size: 20px;
+    margin-right: 10px;
+    font-weight: 300;
+    padding-right: 8px;
+}
+
+.Library .library__content .fa-plus {
+    margin: 24px 10px;
+}
+
+/* SIDEBAR PLAYLIST */
+.section-playlist {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 20px;
+    background-color: #242424;
+    color: #b3b3b3;
+    font-weight: 600;
+    font-size: 14px;
+    margin: 8px 0;
+    padding: 16px 20px;
+    border-radius: 10px;
+}
+
+.section-playlist .section-playlist__content {
+    display: flex;
+    flex-direction: column;
+}
+
+.section-playlist__content .text {
+    padding-bottom: 14px;
+    color: #fff;
     font-family: "DM Sans", sans-serif;
 }
 
-.library .header span {
+.section-playlist__content .title {
+    font-weight: 700;
+}
+
+.section-playlist__content .subtitle {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.section-playlist__content .section-playlist__button {
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
     padding: 10px;
+    margin-top: 12px;
+    border: 0;
+    width: 113px;
+}
+
+/* SIDEBAR COOKIES */
+.sidebar .cookies {
+    margin: 25px 20px;
+}
+
+.sidebar .cookies a {
+    color: #b3b3b3;
+    font-weight: 500;
+    font-size: 10px;
+    text-decoration: none;
+}
+
+.sidebar .cookies a:hover {
+    text-decoration: underline;
+}
+
+/* SIDEBAR LANGUAGES */
+.languages .languages__button {
+    align-items: center;
+    background-color: transparent;
+    border: 1px solid #878787;
+    color: #fff;
+    cursor: pointer;
+    width: 170px;
+    margin: 9px;
+    padding: 8px;
+    border-radius: 20px;
 }
