--- a/styles.css
+++ b/styles.css
@@ -174,3 +174,53 @@ body {
     padding: 8px;
     border-radius: 20px;
 }
+
+
+/* FOOTER */
+.footer {
+    display: flex;
+    background: linear-gradient(45deg, blue, red);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100px;
+    justify-items: auto;
+    
+}
+
+.footer .footer__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+
+}
+
+.footer__content .text {
+    padding-bottom: 14px;
+    color: #fff;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 500;
+}
+
+.footer__button {
+    padding: 20px;
+    margin-left: 20px;
+    display: flex;
+    justify-content: center;
+    background-color: #fff;
+    color: #000;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 700;
+    font-family: "DM Sans", sans-serif;
+    text-decoration: none;
+    text-transform: none;
+    padding: 10px;
+    margin-top: 30px;
+    border: 0;
+    width: fit-content;
+    height:fit-content;
+}
