putting footer like the original

--- a/styles/sidebar-footer.css
+++ b/styles/sidebar-footer.css
@@ -174,48 +174,41 @@ body {
 
 
 /* FOOTER */
-.footer {
-    display: flex;
-    background: linear-gradient(45deg, blue, red);
+.disclaimer-premium {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
-    width: 100%;
-    height: 100px;
-    justify-items: auto;
-    
-}
-
-.footer .footer__content {
+    background: linear-gradient(to right, #ae2896, #509bf5);
+    padding: 15px 40px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 20px;
-
+    justify-content: space-between;
+}
+.disclaimer-premium .text {
+   flex-shrink: 0;
+}
+.disclaimer-premium .disclaimer-premium__title {
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 12px;
+    margin-bottom: 10px;
 }
 
-.footer__content .text {
-    padding-bottom: 14px;
-    color: #fff;
+.disclaimer-premium .disclaimer-premium__subtitle {
+    color: #ffffff;
+    font-size: 14px;
     font-weight: 500;
 }
 
-.footer__button {
-    padding: 20px;
-    margin-left: 20px;
-    display: flex;
-    justify-content: center;
-    background-color: #fff;
-    color: var(--color-black);;
-    border-radius: 20px;
-    font-size: 12px;
-    font-weight: 700;
-    text-decoration: none;
-    text-transform: none;
-    padding: 10px;
-    margin-top: 30px;
-    border: 0;
-    width: fit-content;
-    height:fit-content;
+.disclaimer-premium button {
+    background-color: #ffffff;
+    color: #000000;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    border: 0px;
+    border-radius: 40px;
+    cursor: pointer;
+    flex-shrink: 0;
 }
