--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,179 +1,171 @@
-body {
-    background-color: var(--color-black);
+body{
+    background-color: #000;
     font-family: var(--font-dm-sans);
 }
 
-/* SIDEBAR */
-.sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    padding: 12px;
-    width: 300px;
-    color: white;
+.sidebar{
+    position:fixed;
+    top:0;
+    left:0;
+    bottom:0;
+    padding:12px;
+    width:300px;
 }
 
-.sidebar__navigation {
-    background-color: rgba(128, 128, 128, 0.219);
-    border-radius: 8px;
-    padding: 16px 0px 0px 16px;
+.sidebar__navigation{
+    background-color: #121212;
+    border-radius:8px;
+    padding:16px 0 0 16px;
 }
 
-.sidebar__navigation .logo {
+.logo{
     background: #121212;
-    margin: 10px;
-    border-radius: 8px;
-    padding: 16px;
+    display:flex;
+    border-radius:8px ;
+    padding:16px 0 0 16px;
 }
 
-.sidebar__navigation .logo img {
-    width: 80px;
+.sidebar__navigation .logo img{
+    width:80px;
 }
 
-.sidebar nav ul {
+.sidebar nav ul{
     margin-top: 20px;
-    padding: 0 20px 10px 20px;
+    padding:0 20px 10px 20px;
 }
 
-.sidebar ul li {
+.sidebar ul li{
     padding: 10px 0;
 }
 
-.sidebar nav ul li a {
+.sidebar nav ul li a{
     color: #b3b3b3;
     text-decoration: none;
-    font-weight: bold;
-    font-size: 14px;
-    padding: 10px 0;
-}
-
-/* SIDEBAR - LIBRARY */
-
-.library {
-    background-color: #121212;
-    border-radius: 8px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    padding: 4px 8px;
-    color: #b3b3b3;
     font-weight: 600;
     font-size: 14px;
+}
+
+.library{
+    background-color:#121212;
+    border-radius:8px;
+    display:flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding:4px 8px;
+    color:#b3b3b3;
+    font-weight: 600;
+    font-size:14px;
     margin-top: 10px;
 }
 
-.library .library__content {
-    display: flex;
+.library .library__content{
+    display:flex;
     justify-content: space-between;
 }
 
-.Library .library__button {
-    display: flex;
-    margin-right: 1px;
-    color: #b3b3b3;
+.library .library__button{
+    display:flex;
+    margin-right: 10px;
+    color:#b3b3b3;
     background-color: transparent;
-    border: 0;
+    border:0px;
     font-size: 14px;
     font-weight: 700;
     text-align: center;
     text-decoration: none;
     text-transform: none;
-    padding: 20px 10px;
+    padding:20px 10px;
 }
 
-.Library .library__button .fa {
-    font-size: 20px;
-    margin-right: 10px;
+.library .library__button .fa{
+    font-size:20px;
     font-weight: 300;
-    padding-right: 8px;
+    color:#b3b3b3;
+    margin-right: 10px;
+    padding-right:8px;
 }
 
-.Library .library__content .fa-plus {
+.library .library__content .fa-plus{
     margin: 24px 10px;
 }
 
-/* SIDEBAR PLAYLIST */
-.section-playlist {
-    display: flex;
+.section-playlist{
+    display:flex;
     align-items: flex-start;
     justify-content: space-between;
-    gap: 20px;
+    gap:20px;
     background-color: #242424;
-    color: #b3b3b3;
+    color:#b3b3b3;
     font-weight: 600;
     font-size: 14px;
     margin: 8px 0;
-    padding: 16px 20px;
-    border-radius: 10px;
+    padding:16px 20px;
+    border-radius:10px;
 }
 
-.section-playlist .section-playlist__content {
-    display: flex;
+.section-playlist .section-playlist__content{
+    display:flex;
     flex-direction: column;
 }
 
-.section-playlist__content .text {
-    padding-bottom: 14px;
-    color: #fff;
+.section-playlist__content .text{
+    padding-bottom:14px;
+    color:#FFF;
 }
 
-.section-playlist__content .title {
+.section-playlist__content .title{
     font-weight: 700;
 }
 
-.section-playlist__content .subtitle {
+.section-playlist__content .subtitle{
     font-weight: 500;
     font-size: 12px;
 }
 
-.section-playlist__content .section-playlist__button {
+.section-playlist__content .section-playlist__button{
     display: flex;
     justify-content: center;
-    background-color: #fff;
-    color: var(--color-black);
+    background-color: #FFF;
+    color:#000;
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    text-decoration: none;
+    text-decoration:none;
     text-transform: none;
-    padding: 10px;
+    padding:10px;
     margin-top: 12px;
-    border: 0;
+    border:0;
     width: 113px;
 }
 
-/* SIDEBAR COOKIES */
-.sidebar .cookies {
-    margin: 25px 20px;
+.sidebar .cookies{
+    margin:25px 20px;
 }
 
-.sidebar .cookies a {
-    color: #b3b3b3;
+.sidebar .cookies a{
+    color:#b3b3b3;
     font-weight: 500;
-    font-size: 10px;
+    font-size:10px;
     text-decoration: none;
 }
 
-.sidebar .cookies a:hover {
+.sidebar .cookies a:hover{
     text-decoration: underline;
 }
 
-/* SIDEBAR LANGUAGES */
-.languages .languages__button {
+.languages .languages__button{
     align-items: center;
     background-color: transparent;
     border: 1px solid #878787;
-    color: #fff;
-    cursor: pointer;
+    color:#FFF;
+    font-weight: bold;
+    cursor:pointer;
     width: 170px;
-    margin: 9px;
-    padding: 8px;
-    border-radius: 20px;
+    margin:8px;
+    padding:8px;
+    border-radius:20px;
 }
 
-
-/* FOOTER */
 .disclaimer-premium {
     position: fixed;
     bottom: 0;
